--- a/game.html
+++ b/game.html
@@ -29,17 +29,16 @@
         </div>
 
         <div class="start-button">
-        <button id="start-btn" type="submit"><span id="start-text-color">START GAME</span></button>
+        <button id="start-btn" type="submit"><span id="start-text-color">TEST GAME - 5s</span></button>
         <div class="level-buttons">
-            <button id="beginner-btn" type="submit"><span id="start-text-color">BEGINNER</span></button>
-            <button id="intermediate-btn" type="submit"><span id="start-text-color">INTERMEDIATE</span></button>
-            <button id="advanced-btn" type="submit"><span id="start-text-color">ADVANCED</span></button>
-            <button id="master-btn" type="submit"><span id="start-text-color">MASTER</span></button>
+            <button id="beginner-btn" type="submit"><span id="start-text-color">BEGINNER - 30s</span></button>
+            <button id="intermediate-btn" type="submit"><span id="start-text-color">INTERMED - 25s</span></button>
+            <button id="advanced-btn" type="submit"><span id="start-text-color">ADVANCED - 20s</span></button>
+            <button id="master-btn" type="submit"><span id="start-text-color">MASTER - 15s</span></button>
             </div>
         </div>
 
      
-
 <script src="./js/game.js"></script>
 <script src="./js/background.js"></script>
 </body>
